examples/bad/static_error_args_names_not_unique.ps
int f(int x, int x) {
    return x + x;
}

println(f(13, 42));